src/components/PageLayout/Header/header.module.less
@import (reference) '../../../styles/index.less';

.circleMenu {
    background: #304CFD;
    border-radius: 50% 0 50% 50%;
    box-shadow: 0 24px 40px rgba(48, 76, 253, 0.1), 0 8px 16px rgba(48, 76, 253, 0.1);
    display: -webkit-flex;
    display: -ms-flexbox;
    display: -moz-box;
    display: flex;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    justify-content: center;
    height: 3.75rem;
    pointer-events: none;
    visibility: hidden;
    position: fixed;
    top: 0;
    right: 0;
    width: 3.75rem;
    z-index: 1101;
    @media only screen and (max-width: 768px){
        pointer-events: all;
        visibility: visible;
    }
    .hamburger {
        cursor: pointer;
        color: #fff;
        text-align: center;
        .hamburgerText {
            position: absolute;
            width: 100%;
            top: 33%;
            left: 0;
            font-size: .75rem;
        }
    }
    &:focus{
        outline:none;
    }
}
.menuIcon {
    .hamburgerText {
        opacity: 0;
    }
    .line{
        background-color: #fff;
        border-radius: 4px;
        display: block;
        margin: 4px 0;
        height: 2px;
        width: 18px;
        transition: all 0.2s ease-in-out;
    }
    .line:nth-child(1) {
        transform: translateY(0px) rotate(45deg);
    }
    .line:nth-child(2) {
        transform: translateY(-6px) rotate(-45deg);
    }
}
.content{
    background: var(--bg-content);
    border-radius: @border-radius-content;
    margin: 0px;
    min-height: 280px
}
.navWrap{
    max-width: @body-width;
    flex-direction: row-reverse;
    ul {
        list-style: none;
        margin: 0;
        display: flex;
    }
}
.nav{
    .flex-center();
    background-color: var(--bg-content);
    border-radius: 0 3rem 0 0;
    color: var(--nav-color);
    font-weight: 500;
    height: 4.35rem;
    letter-spacing: .04rem;
    margin-left: auto;
    padding-top: 1rem;
    padding-right: 2.5rem;
    position: relative;
    bottom: -.1px;
    z-index: 1;
    &:before {
        content: '';
        // The svg is white-filled; use it as a mask so the edge follows the theme
        background-color: var(--bg-content);
        -webkit-mask-image: url(../../../images/nav-edge.svg);
        mask-image: url(../../../images/nav-edge.svg);
        -webkit-mask-size: 100% 100%;
        mask-size: 100% 100%;
        height: 102.1%;
        position: absolute;
        top: 1px;
        left: -133px;
        width: 135px;
        z-index: -1;
    }
    .navItem{
        margin-right: .4rem;
        a{
            color: var(--nav-color);
            padding: .6rem 1rem;
            text-transform: uppercase;
        }
        .anchorActive{
            background-color: var(--accent);
            border-radius: 14px;
            color: #fff;
        }
    }
    
}
/** mobile header code */
.openMenu{
    ul{
        display: block;
        margin: 0;
        position: absolute;
        top: (50% - 5rem);
        left: 50%;
        -ms-transform: translate(-50%, -50%);
        transform: translate(-50%, -50%);
        transition: all 2s;
        li{
            margin-bottom: 1rem;
        }
    }
    .nav{
        background-color: #304CFD;
        &:before {
            background-image: none;
        }
        .navItem{
            a{
                color: white;
                font-size: 1.2rem;
            }
            .anchorActive{
                background-color: #304CFD;
                border-radius: 14px;
                color: white
            }
        }
    }
    .backgroundDiv{
        position: fixed;
        background-color: #304CFD;
        width: 100%;
        height: 100%;
        z-index: 100;
        right: 0;
        top: 0;
    }
}
.hidden{
    @media screen and ( max-width:768px ) {
        display: none;
    }
}

